#566 isssue fix for the content name overlap and MI pad responsive design fixes

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -603,6 +603,14 @@ ion-popover-view.fit ion-content {
     position: absolute;
 }
 
+
+@media(min-width:1024px) {
+    .gc-content-owner {
+        margin-top: 15%;
+    }
+}
+
+
 .btn-credits {
     position: absolute;
     width: 4%;
